v1.0.1
- don't show handle on windows of 0 width or height
- drag the background workspace to scroll (when some windows are partially out of view)

v1.0.0