@@ -1,5 +1,6 @@
 v1.0.1
 - don't show handle on windows of 0 width or height
 - drag the background workspace to scroll (when some windows are partially out of view)
+- option: box handle once
 
 v1.0.0
